Edit Atom's journey in OurJourneyHilights

--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -60,10 +60,11 @@
 
         <!-- ส่วนข้อมูลอะตอม -->
         <div class="container left" id="third">
-            <img id="supapng" src="resources/" height="300px" width="200">
+            <img id="supapng" src="resources/Supavit.png" height="300px" width="200">
             <div class="textbox L">
-                <h1></h1>
-                <p></p>
+                <h1>Atom</h1>
+                <p>เรียนรู้การเขียนโปรแกรม, การแก้ปัญหาเชิงตรรกะ, การวิเคราะห์ข้อมูล,
+                    และการใช้งานเทคโนโลยี ที่เกี่ยวข้องกับการทำงานจริง พร้อมกับกิจกรรมเสริมที่ช่วยเพิ่มทักษะการทำงานร่วมกับผู้อื่น</p>
             </div>
         </div>
 
