--- a/home.html
+++ b/home.html
@@ -137,13 +137,13 @@
                     <form id="form">
                         <!-- Firstname and Lastname Field -->
                         <div class="form-group">
-                            <label for="fullname">ชื่อ-นามสกุล</label>
+                            <label for="fullname">ชื่อ-นามสกุล<span class="required">*</span></label>
                             <input type="text" id="fullname" name="fullname" />
                             <span id="fullnameError" class="error"></span>
                         </div>
                         <!-- Gender -->
                         <div class="form-group">
-                            <label for="gender">เพศ</label>
+                            <label for="gender">เพศ<span class="required">*</span></label>
                             <div class="radio-group">
                                 <label><input type="radio" name="gender" value="ชาย"> ชาย</label>
                                 <label><input type="radio" name="gender" value="หญิง"> หญิง</label>
@@ -153,13 +153,13 @@
                         </div>
                         <!-- Email -->
                         <div class="form-group">
-                            <label for="email">Email</label>
+                            <label for="email">Email<span class="required">*</span></label>
                             <input type="email" id="email" name="email" />
                             <span id="emailError" class="error"></span>
                         </div>
                         <!--Satisfaction-->
                         <div class="form-group">
-                            <label for="satisfaction">ความพึงพอใจต่อเว็บไซต์</label>
+                            <label for="satisfaction">ความพึงพอใจต่อเว็บไซต์<span class="required">*</span></label>
                             <select name="satisfaction" id="satisfaction">
                                 <option value="" disabled selected>Select an option</option>
                                 <option value="ดีเยี่ยม ">ดีเยี่ยม</option>
