add ter pic and information

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -106,7 +106,7 @@
         <!--ส่วนข้อมูลเต้อ-->
 
         <div class="container right" id="sixth">
-            <img id="burapng" src="resources/" height="300px" width="200">
+            <img id="burapng" src="resources/6709650441.jpg" height="300px" width="200">
             <div class="textbox R">
                 <h1>'Ter'</h1>
                 <p>"ผมตื่นเต้นมากที่จะได้ก้าวเข้าสู่โลกของ AI
