--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -88,10 +88,10 @@
 
         <!-- ส่วนข้อมูลเต้อ -->
         <div class="container right" id="sixth">
-            <img id="burapng" src="resources/" height="300px" width="200">
+            <img id="burapng" src="resources/6709650441.jpg" height="300px" width="200">
             <div class="textbox R">
-                <h1></h1>
-                <p></p>
+                <h1>Ter</h1>
+                <p>เรียนการเขียนโปรแกรมเพื่อเข้าใจหลักการ และควบคู่ไปกับการเพิ่มทักษะ soft skill และหา connection และหาประสบการณ์ คิด innovation เพื่อทำธุระกิจส่วนตัว </p>
             </div>
         </div>
     </main>
