form alert message and decoration

--- a/home.html
+++ b/home.html
@@ -161,7 +161,7 @@
                         <div class="form-group">
                             <label for="satisfaction">ความพึงพอใจต่อเว็บไซต์<span class="required">*</span></label>
                             <select name="satisfaction" id="satisfaction">
-                                <option value="" disabled selected>Select an option</option>
+                                <option value="" disabled selected>กรุณาเลือกความพึงพอใจของตุณ</option>
                                 <option value="ดีเยี่ยม ">ดีเยี่ยม</option>
                                 <option value="ดีมาก">ดีมาก </option>
                                 <option value="พอใช้">พอใช้ </option>
@@ -179,6 +179,14 @@
                             <input type="submit" value="Submit" />
                         </div>
                     </form>
+                    <div class="message">
+                        <div class="success" id="success"></div>
+                        <div class="danger" id="danger"></div>
+                        <div class="fullname_alert" id="fullname_alert"></div>
+                        <div class="email_alert" id="email_alert"></div>
+                        <div class="gender_alert" id="gender_alert"></div>
+                        <div class="satisfaction_alert" id="satisfaction_alert"></div>
+                    </div>
                 </div>
                 <div class="display-area_container">
                     <h1> All Guests</h1>
