--- a/home.html
+++ b/home.html
@@ -124,8 +124,8 @@
                 </div>
 
                 <button id="next">></button>
-                <button id="prev">
-                    << /button>
+                <button id="prev"><</button>
+                   
 
             </div>
         </section>
