--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -51,10 +51,11 @@
 
         <!-- ส่วนข้อมูลกาน -->
         <div class="container right" id="second">
-            <img id="wuttipng" src="resources/" height="300px" width="200">
+            <img id="wuttipng" src="resources/Wuttikorn.jpg" height="300px" width="200">
             <div class="textbox R">
-                <h1></h1>
-                <p></p>
+                <h1>Kan</h1>
+                <p>ออกไปพบประสบการณ์จริง นอกจาการเรียนรู้ภายในห้องเรียน เพื่อสร้าง connection ศึกษาความรู้ทางด้านการเงิน 
+                    และเทคโนโลยีใหม่ที่มีเพิ่มขึ้นทุกวัน ลองลงทุนในหุ้น พร้อมกับพัฒนาสกิลในการเขียนโปรแกรม และ ดูแลสุขภาพ เช่น การออกไปเล่นกีฬาที่ชอบ  </p>
             </div>
         </div>
 
