--- a/home.html
+++ b/home.html
@@ -62,9 +62,12 @@
                     <h1>Kan</h1>
                     <img class="images" src="resources/Wuttikorn.jpg">
                     <div class="data">
-                        <li>Dream: </li>
-                        <li>Song: </li>
-                        <li>Quote: </li>
+                        <li>Dream:  </li>
+                        อยากมีอิสระทางการเงิน 
+                        <li>Song:</li>
+                      <a href="https://www.youtube.com/watch?v=_VuJA-VQRcY" >Central Cee-Doja </a>
+                        <li>Quote:</li>
+                           Can't rush Greatness 
                         <span class="name">นาย วุฒิกร บุญทวี</span>
                         <span class="stnumber">เลขประจำตัว:6709650623</span>
 
@@ -72,7 +75,7 @@
                 </div>
                 <div class="item">
                     <h1>Atom</h1>
-                    <img class="images" src="resources/.jpg">
+                    <img class="images" src="resources/Supavit.png">
                     <div class="data">
                         <li>Dream: </li>
                         <li>Song: </li>
@@ -112,7 +115,7 @@
                 </div>
                 <div class="item">
                     <h1>Ter</h1>
-                    <img class="images" src="resources/.jpg">
+                    <img class="images" src="resources/6709650441.jpg">
                     <div class="data">
                         <li>Dream: </li>
                         <li>Song: </li>
