add ter infomation

--- a/home.html
+++ b/home.html
@@ -117,9 +117,9 @@
                     <h1>Ter</h1>
                     <img class="images" src="resources/6709650441.jpg">
                     <div class="data">
-                        <li>Dream: </li>
-                        <li>Song: </li>
-                        <li>Quote: </li>
+                        <li>Dream: มีแฟนน่ารักๆ</li>
+                        <li>Song: มะมะมะหมูเด้งง</li>
+                        <li>Quote: อตฺตา หิ อตฺตโน นาโถ</li>
                         <span class="name">นาย บูรพา จินดาเลิศ</span>
                         <span class="stnumber">เลขประจำตัว:6709650441</span>
 
