--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
         <section class="containerdata">
             <div class="slider">
                 <div class="item">
-                    <h1>pooh</h1>
+                    <h1 class="nameh">pooh</h1>
                     <img class="images" src="resources/Purinat.jpg">
 
                     <div class="data">
@@ -59,7 +59,7 @@
 
 
                 <div class="item">
-                    <h1>Kan</h1>
+                    <h1 class="nameh">Kan</h1>
                     <img class="images" src="resources/Wuttikorn.jpg">
                     <div class="data">
                         <li>Dream:  </li>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <h1>Atom</h1>
+                    <h1 class="nameh">Atom</h1>
                     <img class="images" src="resources/Supavit.png">
                     <div class="data">
                         <li>Dream: </li>
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <h1>Gene</h1>
+                    <h1 class="nameh">Gene</h1>
                     <img class="images" src="resources/nopphamonthon.jpg">
                     <div class="data">
                         <li>Dream: </li>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <h1>Tae</h1>
+                    <h1 class="nameh">Tae</h1>
                     <img class="images" src="resources/Sirimongkol.jpg">
                     <div class="data">
                         <li>Dream: </li>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <h1>Ter</h1>
+                    <h1 class="nameh">Ter</h1>
                     <img class="images" src="resources/6709650441.jpg">
                     <div class="data">
                         <li>Dream: มีแฟนน่ารักๆ</li>
