Minor changed on some sentences

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -83,12 +83,9 @@
             <img id="noppapng" src="resources/nopphamonthon.jpg" height="300px" width="200">
             <div class="textbox R">
                 <h1>'Gene'</h1>
-                <p>"ผมไม่ค่อยชอบการเป็นพนักงานเงินเดือนเท่าไหร่ อาจจะหาเงินในตลาดหลักทรัพย์แทน แต่เหนือสิ่งอื่นใด
-                    ผมฝันอยากจะมีธุรกิจเป็นของตนเอง
-                    ด้วยความที่ผมชอบอาหาร ผมอาจตัดสินใจทำธุรกิจเกี่ยวกับอาหาร หรือไม่ก็เปิดร้านอาหารเป็นของตัวเอง
-                    ซึ่งเป็นความฝันในวัยเด็กของผม หากเปิดร้านอาหาร
-                    ผมอยากจะขยายสาขาไปทั่วประเทศและทำให้ทุกคนรู้จักและแพร่หลาย
-                    นั่นเป็นส่วนหนึ่งในความสำเร็จที่ผมจะทำเลย"</p>
+                <p>"ผมไม่ค่อยชอบการเป็นพนักงานเงินเดือนเท่าไหร่แต่ก็ปฏิเสธไม่ได้เพราะมันเป็นขั้นแรกของการทำงาน 
+                    ผมฝันอยากจะมีธุรกิจเป็นของตนเอง ด้วยความที่ผมชอบอาหาร ผมอาจตัดสินใจทำธุรกิจเกี่ยวกับอาหาร 
+                    หรือไม่ก็เปิดร้านอาหารเป็นของตัวเอง ซึ่งเป็นความฝันในวัยเด็กของผมและยังเป็นส่วนหนึ่งในความสำเร็จที่ผมจะทำเลย"</p>
             </div>
         </div>
 
