--- a/OurJourneyHilights.html
+++ b/OurJourneyHilights.html
@@ -74,7 +74,7 @@
             <img id="noppapng" src="resources/nopphamonthon.jpg" height="300px" width="200">
             <div class="textbox R">
                 <h1>Gene</h1>
-                <p>เรียนการเขียนโปรแกรม ลองทำอะไรใหม่ๆ ท้าทายความสามารถ เก็บเงิน ลองลงทุนในตลาดหลักทรัพย์ ต่อยอดธุรกิจ ทำ startup </p>
+                <p>เรียนการเขียนโปรแกรม อยากลองสร้างเกม ลองทำอะไรใหม่ๆท้าทายความสามารถ เก็บเงิน ลองลงทุนในตลาดหลักทรัพย์ ต่อยอดธุรกิจ</p>
             </div>
         </div>
 
