--- a/home.html
+++ b/home.html
@@ -164,7 +164,7 @@
                         <div class="form-group">
                             <label for="satisfaction">ความพึงพอใจต่อเว็บไซต์<span class="required">*</span></label>
                             <select name="satisfaction" id="satisfaction">
-                                <option value="" disabled selected>กรุณาเลือกความพึงพอใจของตุณ</option>
+                                <option value="" disabled selected>กรุณาเลือกความพึงพอใจของคุณ</option>
                                 <option value="ดีเยี่ยม ">ดีเยี่ยม</option>
                                 <option value="ดีมาก">ดีมาก </option>
                                 <option value="พอใช้">พอใช้ </option>
