add data for all of us

--- a/home.html
+++ b/home.html
@@ -48,8 +48,13 @@
 
                     <div class="data">
                         <li>Dream: </li>
+                        <p> เศรษฐีพันล้านหมื่นล้าน💵💸</p>
                         <li>Song: </li>
+                      <a href="https://youtu.be/2Vv-BfVoq4g?si=eBFD3jYY9v95HD4w">Perfect ED Sheeran </a>
                         <li>Quote: </li>
+                        <p> If we don't take action today, when will we achieve success?</p>
+                       <li>favourite food:</li>
+                       <p> Udon Sushi</p>
                         <span class="name"> นายภูริณัฐ วรรธนะธัญญา</span>
                         <span class="stnumber">เลขประจำตัว:6709650623</span>
 
@@ -63,11 +68,13 @@
                     <img class="images" src="resources/Wuttikorn.jpg">
                     <div class="data">
                         <li>Dream:  </li>
-                        อยากมีอิสระทางการเงิน 
+                        <p>อยากมีอิสระทางการเงิน </p>
                         <li>Song:</li>
                       <a href="https://www.youtube.com/watch?v=_VuJA-VQRcY" >Central Cee-Doja </a>
                         <li>Quote:</li>
-                           Can't rush Greatness 
+                        <p> Can't rush Greatness </p>
+                           <li>favourite food:</li>
+                           <p>  มาม่าเผ็ด🌶️</p>
                         <span class="name">นาย วุฒิกร บุญทวี</span>
                         <span class="stnumber">เลขประจำตัว:6709650623</span>
 
@@ -77,9 +84,15 @@
                     <h1>Atom</h1>
                     <img class="images" src="resources/Supavit.png">
                     <div class="data">
-                        <li>Dream: </li>
-                        <li>Song: </li>
-                        <li>Quote: </li>
+                        <li>Dream:  </li>
+                        <p> อยากรวย</p>
+ 
+                        <li>Song:</li>
+                      <a href="https://youtu.be/ZRtdQ81jPUQ?si=96eoDAXeJ3T-HBAr" >アイドルアイドル </a>
+                        <li>Quote:</li>
+                        <p> To move foward is to leave something behind.</p>
+                           <li>favourite food:</li>
+                           <p> ไข่เจียว</p>
                         <span class="name">นาย ศุภวิชญ์ ไม้จัตุรัส</span>
                         <span class="stnumber">เลขประจำตัว:6709650656</span>
 
@@ -90,10 +103,14 @@
                     <h1>Gene</h1>
                     <img class="images" src="resources/nopphamonthon.jpg">
                     <div class="data">
-                        <li>Dream: </li>
-                        <li>Song: </li>
-                        <li>Quote: </li>
-
+                        <li>Dream:  </li>
+                        <p> นักธุรกิจหมื่นล้าน🤑🤑🤑 </p>
+                        <li>Song:</li>
+                      <a href="https://youtu.be/_U676XxCmkE?si=DVPTIiuAtXZBC496" >ความไม่รัก - yented </a>
+                        <li>Quote:</li>
+                        <p>  Everyone deserves a second chance, except those who knowingly chose to do wrong. </p>
+                           <li>favourite food:</li>
+                           <p> ช่วงนี้ไม่มีอะไรโปรดปราน กินทุกอย่าง</p>
 
                         <span class="name">นาย นภมณฑล ธนานุรักษ์ </span>
                         <span class="stnumber">เลขประจำตัว:6709650417
@@ -105,9 +122,14 @@
                     <h1>Tae</h1>
                     <img class="images" src="resources/Sirimongkol.jpg">
                     <div class="data">
-                        <li>Dream: </li>
-                        <li>Song: </li>
-                        <li>Quote: </li>
+                        <li>Dream:  </li>
+                        <p>มีเงินมากพอที่จะซื้อทุกอย่างที่ต้องการได้</p>
+                        <li>Song:</li>
+                      <a href="https://youtu.be/JCU8sGuG51Q?si=eK5AvcnGkU8ebxCq" >航行-蒋小呢 </a>
+                        <li>Quote:</li>
+                        <p>unfortunately I am a smart coward </p>
+                           <li>favourite food:</li>
+                          <p> ข้าวมันไก่,ข้าวกะเพรา</p>
                         <span class="name">นาย ศิริมงคล ดอนศรีโคตร</span>
                         <span class="stnumber">เลขประจำตัว:6709650631</span>
 
@@ -117,9 +139,14 @@
                     <h1>Ter</h1>
                     <img class="images" src="resources/6709650441.jpg">
                     <div class="data">
-                        <li>Dream: </li>
-                        <li>Song: </li>
-                        <li>Quote: </li>
+                        <li>Dream:  </li>
+                        <p> มีแฟนน่ารักๆ </p>
+                        <li>Song:</li>
+                      <a href="https://youtu.be/AdHps0Mizdk?si=ZaDJ7Tk4kl2uS5Bw" >มะมะมะหมูเด้งง </a>
+                        <li>Quote:</li>
+                        <p> อตฺตา หิ อตฺตโน นาโถ </p>
+                           <li>favourite food:</li>
+                           <p> หอยทอด</p>
                         <span class="name">นาย บูรพา จินดาเลิศ</span>
                         <span class="stnumber">เลขประจำตัว:6709650441</span>
 
