decorate slider in home

--- a/home.html
+++ b/home.html
@@ -47,14 +47,13 @@
                     <img class="images" src="resources/Purinat.jpg">
 
                     <div class="data">
+                        <a href="https://youtu.be/2Vv-BfVoq4g?si=eBFD3jYY9v95HD4w" target="_blank"><i class='bx bxl-youtube'></i>Perfect - ED Sheeran </a>
                         <li>Dream: </li>
                         <p> เศรษฐีพันล้านหมื่นล้าน💵💸</p>
-                        <li>Song: </li>
-                      <a href="https://youtu.be/2Vv-BfVoq4g?si=eBFD3jYY9v95HD4w">Perfect ED Sheeran </a>
                         <li>Quote: </li>
                         <p> If we don't take action today, when will we achieve success?</p>
                        <li>favourite food:</li>
-                       <p> Udon Sushi</p>
+                       <p> Udon🍜 Sushi🍣</p>
                         <span class="name"> นายภูริณัฐ วรรธนะธัญญา</span>
                         <span class="stnumber">เลขประจำตัว:6709650623</span>
 
@@ -67,10 +66,9 @@
                     <h1 class="nameh">Kan</h1>
                     <img class="images" src="resources/Wuttikorn.jpg">
                     <div class="data">
+                        <a href="https://www.youtube.com/watch?v=_VuJA-VQRcY" target="_blank"><i class='bx bxl-youtube'></i>Central Cee - Doja </a>
                         <li>Dream:  </li>
                         <p>อยากมีอิสระทางการเงิน </p>
-                        <li>Song:</li>
-                      <a href="https://www.youtube.com/watch?v=_VuJA-VQRcY" >Central Cee-Doja </a>
                         <li>Quote:</li>
                         <p> Can't rush Greatness </p>
                            <li>favourite food:</li>
@@ -84,11 +82,9 @@
                     <h1 class="nameh">Atom</h1>
                     <img class="images" src="resources/Supavit.png">
                     <div class="data">
+                        <a href="https://youtu.be/ZRtdQ81jPUQ?si=96eoDAXeJ3T-HBAr" target="_blank"><i class='bx bxl-youtube'></i>アイドルアイドル </a>
                         <li>Dream:  </li>
                         <p> อยากรวย</p>
- 
-                        <li>Song:</li>
-                      <a href="https://youtu.be/ZRtdQ81jPUQ?si=96eoDAXeJ3T-HBAr" >アイドルアイドル </a>
                         <li>Quote:</li>
                         <p> To move foward is to leave something behind.</p>
                            <li>favourite food:</li>
@@ -103,10 +99,9 @@
                     <h1 class="nameh">Gene</h1>
                     <img class="images" src="resources/nopphamonthon.jpg">
                     <div class="data">
+                        <a href="https://youtu.be/_U676XxCmkE?si=DVPTIiuAtXZBC496" target="_blank"><i class='bx bxl-youtube'></i>ความไม่รัก - yented </a>
                         <li>Dream:  </li>
                         <p> นักธุรกิจหมื่นล้าน🤑🤑🤑 </p>
-                        <li>Song:</li>
-                      <a href="https://youtu.be/_U676XxCmkE?si=DVPTIiuAtXZBC496" >ความไม่รัก - yented </a>
                         <li>Quote:</li>
                         <p>  Everyone deserves a second chance, except those who knowingly chose to do wrong. </p>
                            <li>favourite food:</li>
@@ -122,10 +117,9 @@
                     <h1 class="nameh">Tae</h1>
                     <img class="images" src="resources/Sirimongkol.jpg">
                     <div class="data">
+                        <a href="https://youtu.be/JCU8sGuG51Q?si=eK5AvcnGkU8ebxCq" target="_blank"><i class='bx bxl-youtube'></i>航行-蒋小呢 </a>
                         <li>Dream:  </li>
                         <p>มีเงินมากพอที่จะซื้อทุกอย่างที่ต้องการได้</p>
-                        <li>Song:</li>
-                      <a href="https://youtu.be/JCU8sGuG51Q?si=eK5AvcnGkU8ebxCq" >航行-蒋小呢 </a>
                         <li>Quote:</li>
                         <p>unfortunately I am a smart coward </p>
                            <li>favourite food:</li>
@@ -139,10 +133,9 @@
                     <h1 class="nameh">Ter</h1>
                     <img class="images" src="resources/6709650441.jpg">
                     <div class="data">
+                        <a href="https://youtu.be/AdHps0Mizdk?si=ZaDJ7Tk4kl2uS5Bw" target="_blank"><i class='bx bxl-youtube'></i>มะมะมะหมูเด้งง </a>
                         <li>Dream:  </li>
                         <p> มีแฟนน่ารักๆ </p>
-                        <li>Song:</li>
-                      <a href="https://youtu.be/AdHps0Mizdk?si=ZaDJ7Tk4kl2uS5Bw" >มะมะมะหมูเด้งง </a>
                         <li>Quote:</li>
                         <p> อตฺตา หิ อตฺตโน นาโถ </p>
                            <li>favourite food:</li>
