add responsive for slider tablet size and edit index responsive

--- a/home.html
+++ b/home.html
@@ -108,7 +108,7 @@
                            <p> ช่วงนี้ไม่มีอะไรโปรดปราน กินทุกอย่าง</p>
 
                         <span class="name">นาย นภมณฑล ธนานุรักษ์ </span>
-                        <span class="stnumber">เลขประจำตัว:6709650417
+                        <span class="stnumber">เลขประจำตัว:6709650417</span>
 
 
                     </div>
