add modal for decorate confirm submission and edit js form

--- a/home.html
+++ b/home.html
@@ -215,6 +215,15 @@
                     <h1> All Guests</h1>
                     <div id="display-area"></div>
                 </div>
+                <div id="custom-modal" class="modal">
+                    <div class="modal-content">
+                        <p>คุณต้องการยืนยันการส่งข้อมูลหรือไม่?</p>
+                        <div class="modal-buttons">
+                            <button id="confirm-yes" class="modal-button yes">ยืนยัน</button>
+                            <button id="confirm-no" class="modal-button no">ยกเลิก</button>
+                        </div>
+                    </div>
+                </div>
             </article>
         </div>
     </main>
