--- a/home.html
+++ b/home.html
@@ -161,7 +161,7 @@
                         <!-- Firstname and Lastname Field -->
                         <div class="form-group">
                             <label for="fullname">ชื่อ-นามสกุล<span class="required">*</span></label>
-                            <input type="text" id="fullname" name="fullname" />
+                            <input type="text" id="fullname" name="fullname" placeholder="John Cena"/>
                             <span id="fullnameError" class="error"></span>
                         </div>
                         <!-- Gender -->
@@ -177,7 +177,7 @@
                         <!-- Email -->
                         <div class="form-group">
                             <label for="email">Email<span class="required">*</span></label>
-                            <input type="email" id="email" name="email" />
+                            <input type="email" id="email" name="email" placeholder="youremail@example.com" />
                             <span id="emailError" class="error"></span>
                         </div>
                         <!--Satisfaction-->
