edit js and kan data in ourfuture

--- a/OurFutureHilights.html
+++ b/OurFutureHilights.html
@@ -60,7 +60,7 @@
                 <p>"ในโลกที่เทคโนโลยีก้าวหน้าอย่างรวดเร็ว
                     การเรียนรู้และพัฒนาตัวเองเป็นสิ่งสำคัญสำหรับการเติบโตในอาชีพและการสร้างนวัตกรรมใหม่ ๆ
                     สำหรับอนาคตของและ
-                    ผมมองเห็นว่าอณาคตของเราเต็่มไปด้วย technology ซึ่งจำเป็นต่อโลกในอนาคต
+                    ผมมองเห็นว่าอนาคตของเราเต็มไปด้วย technology ซึ่งจำเป็นต่อโลกในอนาคต
                     เพื่อหน้าที่การงานและการเงินในอนาคต"</p>
             </div>
         </div>
